--- a/Weather_App/index.html
+++ b/Weather_App/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="light">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Techify – Smart SaaS Tool</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact Form</title>
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
